# test__actix-sqlx

./: Cargo.toml  README.txt
migrations/: 20220618081741_init.sql
src/: app.rs  db.rs  error.rs  lib.rs  server.rs  template.rs  util.rs
src/router/: data1_router.rs  mod.rs  ui_router.rs
src/service/: data1_service.rs  mod.rs
templates/: data1.html  index.html
templates/inc/: layout.html
